# Efraim_Bot

./: .gitignore  .pylintrc  LICENSE  README.md  main.py  pyproject.toml
config/: config.py
modelo/: modelo.py
voz/: fala.py  reconhecimento.py
