[project]
name = "efraim-bot"
version = "0.1.0"
description = "Assistente de voz offline com LLM local"
authors = [{ name = "Arthur Ferreira", email = "arthurferreira183@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pylint.'MESSAGES CONTROL']
# Ignora avisos comuns em projetos pessoais
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
]

[tool.pylint.format]
max-line-length = 100

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["voz", "modelo", "config"]
known_third_party = ["pyttsx3", "speech_recognition", "llama_cpp"]
combine_as_imports = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
